tests/specs/check/ts_suppression_unresolved_import/ts_expect_error_multiline.ts
// @ts-expect-error
import {
  value,
} from "missing-package";

console.log(value);
